Simplification des classes workflow + testatabilité des services